--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
       {{ form.hidden_tag() }}
       {{ form.email }}
       {{ form.password }}
+      {{ form.remember }}
       {{ form.submit }}
     </form>
   </body>
