--- a/templates/board.html
+++ b/templates/board.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- standard stuff for head -->
     <title>Placeholder Name</title>
+    <script type="text/javascript" src="static/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
  </head>
   <body>
     <h1>Kanban Boards</h1>
-    <button type="button" onclick="openPopup()">Create New Board</button>
+    
+    <ul>
+      <li><a href='/'>Home</a></li>
+    </ul>
+      
+    <ul>
+      {% for list in lists %}
+      <button id="{{list}}" onclick="selectTheList(this.id)"><li>{{list}}</li></button><br>
+      {% endfor %}
+    </ul>
+
+    <button type="button" onclick="alert('why are you gay')">Create New Board</button>
 
     <div class="popup-overlay" id="popup-overlay">
       <div class="popup" id="boardname">
@@ -19,7 +32,20 @@
       </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/main.js') }}">
-    </script>
+    <div class="popup-overlay" id="popup-overlay-list">
+      <div class="popup" id="listname">
+        <span class="close" id="closePopup">&times;</span>
+        <div class="popup-content">
+          <p>Please enter a name for your list</p>
+          <input type="text" placeholder="Todo List" id="kanbanName">
+          <button onclick="createBoardList()">Create</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="board-container" id="board-container">
+      <button onclick="openListPopup()">test</button>
+    </div>
+    
   </body>
 </html>
