--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,13 @@
     {% if current_user.is_authenticated %}
       <h2>Welcome {{ current_user.UserName }}</h2>
     {% endif %}
+    <p>Where would you like to go</p>
+    <ul>
+      <li><a href='/login'>Login</a></li>
+      <li><a href='/register'>Register</a></li>
+      {% if current_user.is_authenticated %}
+      <li><a href='/board'>Board</a></li>
+      {% endif%}
+    </ul>
   </body>
 </html>
