--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,18 @@
   </head>
   <body>
     <h1>Login</h1>
+    
+    <ul>
+      <li><a href='/'>Home</a></li>
+      <li><a href='/register'>Register</a></li>
+    </ul>
 
     <form method="post" action="">
       {{ form.hidden_tag() }}
-      {{ form.email }}
-      {{ form.password }}
-      {{ form.remember }}
+      {{ form.email }} <br><br>
+      {{ form.password }} <br><br>
+      <label>Remember me?</label>
+      {{ form.remember }} <br><br>
       {{ form.submit }}
     </form>
   </body>
