--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1>Create an account</h1>
+    
+    <ul>
+      <li><a href='/'>Home</a></li>
+      <li><a href='/login'>Login</a></li>
+    </ul>
 
     <form method="post" action="">
       {{ form.hidden_tag() }}
