--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,4 @@
 /* Main stylesheet file */
-
 .popup-overlay {
     display: none;
     position: fixed;
@@ -19,17 +18,19 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 2;
 }
 .popup-content {
     text-align: center;
 }
 .popup .close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 2.5px;
+    right: -5px;
     font-size: 20px;
     cursor: pointer;
     color: #333;
+    background-color: rgba(255, 255, 255, 0);
 }
 .popup #kanbanName {
     width: 80%;
@@ -50,11 +51,46 @@
 
 /* Kanban Board Elements */
 
-.board-container {
-  border: solid black 2px;
-  height: 100vh;
-}
-
 .list-container {
   border: solid black 2px;
+  width: 20%;
+  height: 40%;
+  margin: 10px;
+  position: absolute;
+  cursor: move;
+  z-index: 2;
 }
+
+.list-container h2 {
+  text-align: center;
+}
+
+.list-container p {
+  margin-left: 10px;
+}
+
+.board-container {
+  width: 100%;
+  height: 500px;
+  border: 2px dashed #ccc;
+  /* position: relative;  Needed to position children absolutely */
+  z-index: 1;
+}
+
+.draggable {
+  position: absolute; /* Important for dragging */
+  border: 1px solid #000;
+  padding: 10px;
+}
+
+.resize-handle {
+  width: 10px;
+  height: 10px;
+  background-color: gray;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  cursor: se-resize; /* Show resize cursor */
+}
+
+
