--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,9 +56,12 @@
   width: 20%;
   height: 40%;
   margin: 10px;
-  position: absolute;
+  position: relative;
   cursor: move;
-  z-index: 2;
+}
+
+.list-container p {
+    cursor: pointer;
 }
 
 .list-container h2 {
@@ -70,17 +73,11 @@
 }
 
 .board-container {
-  width: 100%;
-  height: 500px;
+  width: 100vw;
+  height: 150vh;
   border: 2px dashed #ccc;
   /* position: relative;  Needed to position children absolutely */
   z-index: 1;
-}
-
-.draggable {
-  position: absolute; /* Important for dragging */
-  border: 1px solid #000;
-  padding: 10px;
 }
 
 .resize-handle {
@@ -93,4 +90,36 @@
   cursor: se-resize; /* Show resize cursor */
 }
 
+/* extra menu stuff */
 
+.button-container {
+  display: flex;          /* Use flexbox to layout items in a row */
+  list-style-type: none; /* Remove bullet points */
+  padding: 0;           /* Remove default padding */
+  margin: 0;            /* Remove default margin */
+}
+
+div {
+    display: inline-block;
+    padding: 10px;
+}
+
+.user_area {
+    border: 2px solid black;
+}
+
+.board_list {
+    margin: 0 auto;
+}
+
+.button-container li {
+  margin-right: 5px;    /* Adjust this value to reduce space between buttons */
+}
+
+.button-container li:last-child {
+  margin-right: 0;      /* Remove margin from the last button */
+}
+
+.header {
+  border-bottom: 4px solid black; /* Line under the header */
+}
