--- a/templates/board.html
+++ b/templates/board.html
@@ -12,19 +12,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
   <body>
-    <h1>Kanban Boards</h1>
-    
-    <ul>
-      <li><a href='/'>Home</a></li>
-    </ul>
-      
-    <ul>
-      {% for list in lists %}
-      <button id="{{list}}" onclick="selectTheList(this.id)"><li>{{list}}</li></button><br>
-      {% endfor %}
-    </ul>
+    <div class="container">
+    <div id='user_area' class="user_area">
+        <h1>Kanban Boards</h1>
+        <h2>Kia Ora {{ current_user.UserName }}</h2>
+        <ul>
+            <li><a href='/'>Home</a></li>
+            <li><a href='/logout'>Logout</a></li>
 
-    <button type="button" onclick="openPopup()">Create New Board</button>
+        </ul>
+    </div>
+    
+    <div id='boards_list'>  
+    <ul class="button-container">
+        {% for list in lists %}
+        <li>
+          <button id="{{list}}" onclick="selectTheList(this.id)">{{list}}</button>
+        </li>
+        {% endfor %}
+        <li><button type="button" onclick="openPopup()">Create New Board</button></li>
+      </ul><br>
+    </div>
 
     <div class="popup-overlay" id="popup-overlay">
       <div class="popup" id="boardname">
@@ -64,86 +72,6 @@
     </div>
 
     <input name="user_id" id="user_id" value="{{ user_id }}" type="hidden" style="position: absolute;">
-
-    <script type="text/javascript">
-    // JavaScript for drag and resize functionality
-    const container = document.getElementById('board-container');
-    const draggables = document.querySelectorAll('.draggable');
-
-    let offsetX, offsetY, draggedElement, isResizing = false, startX, startY, startWidth, startHeight;
-
-    draggables.forEach(draggable => {
-        const resizeHandle = draggable.querySelector('.resize-handle');
-
-        draggable.addEventListener('mousedown', function (e) {
-            if (e.target.classList.contains('resize-handle')) return;
-            draggedElement = this;
-            offsetX = e.clientX - draggedElement.getBoundingClientRect().left;
-            offsetY = e.clientY - draggedElement.getBoundingClientRect().top;
-
-            document.addEventListener('mousemove', onMouseMove);
-            document.addEventListener('mouseup', onMouseUp);
-        });
-
-        resizeHandle.addEventListener('mousedown', function (e) {
-            e.stopPropagation();
-            isResizing = true;
-            draggedElement = draggable;
-            startX = e.clientX;
-            startY = e.clientY;
-            startWidth = parseInt(document.defaultView.getComputedStyle(draggedElement).width, 10);
-            startHeight = parseInt(document.defaultView.getComputedStyle(draggedElement).height, 10);
-
-            document.addEventListener('mousemove', onResize);
-            document.addEventListener('mouseup', onMouseUp);
-        });
-    });
-
-    function onMouseMove(e) {
-        if (!draggedElement || isResizing) return;
-
-        let newX = e.clientX - offsetX;
-        let newY = e.clientY - offsetY;
-
-        // Keep the element within the container bounds
-        const containerRect = container.getBoundingClientRect();
-        const elementRect = draggedElement.getBoundingClientRect();
-
-        if (newX < 0) newX = 0;
-        if (newY < 0) newY = 0;
-        if (newX + elementRect.width > containerRect.width) {
-            newX = containerRect.width - elementRect.width;
-        }
-        if (newY + elementRect.height > containerRect.height) {
-            newY = containerRect.height - elementRect.height;
-        }
-
-        // Move the dragged element
-        draggedElement.style.left = newX + 'px';
-        draggedElement.style.top = newY + 'px';
-    }
-
-    function onResize(e) {
-        if (!isResizing) return;
-
-        let newWidth = startWidth + (e.clientX - startX);
-        let newHeight = startHeight + (e.clientY - startY);
-
-        // Set minimum size
-        if (newWidth > 100) draggedElement.style.width = newWidth + 'px';
-        if (newHeight > 100) draggedElement.style.height = newHeight + 'px';
-    }
-
-    function onMouseUp() {
-        document.removeEventListener('mousemove', onMouseMove);
-        document.removeEventListener('mouseup', onMouseUp);
-        document.removeEventListener('mousemove', onResize);
-        document.removeEventListener('mouseup', onMouseUp);
-        draggedElement = null;
-        isResizing = false;
-    }
-    console.log('this is working!');
-    </script>
     
   </body>
 </html>
