--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,14 @@
   <head>
     <title>Placeholder Name</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/extra.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
+  <body class="">
     <h1>Welcome to TaskMate!</h1>
     {% if current_user.is_authenticated %}
       <h2>Welcome {{ current_user.UserName }}</h2>
@@ -18,6 +24,8 @@
     {% endif %}
     </ul>
     <h2>What is TaskMate?</h2>
-    <p>TaskMate is a free and open source todo list application written in python. The goal of the project is to provide a premium feeling todo list application, without the paywalls that others provide. I am hosting this online but I have also provided the project up on github for free download and the ability to host the application yourself if you wish and also allows you to modify and customize to your hearts content (provided you understand what you are doing :) )</p>
+    <p>TaskMate is a free and open source todo list application written in python. The goal of the project is to provide a premium feeling todo list application, without the paywalls that others provide. I am hosting this online but I have also provided the project up on github for free download and the ability to host the application yourself if you wish and also allows you to modify and customize to your hearts content (provided you understand what you are doing :] )</p>
+
+    <button onclick="toggledark()">Toggle Dark Mode!</button>
   </body>
 </html>
