--- a/templates/board.html
+++ b/templates/board.html
@@ -30,7 +30,7 @@
           <button class="board-button" id="{{list}}" onclick="selectTheList(this.id)">{{list}}</button>
         </li>
         {% endfor %}
-        <li><button type="button" onclick="openPopup()">Create New Board</button></li>
+        <li><button type="button" class="board-button" onclick="openPopup()">Create New Board</button></li>
       </ul><br>
     </div>
 
