--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,18 @@
     <script src="static/js/extra.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style type="text/css">
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+      body {
+        font-family: "Noto Sans", Verdana;
+        font-optical-sizing: auto;
+        font-weight: 300;
+        font-style: normal;
+        font-variation-settings:
+          "wdth" 100;
+      }
+    </style>
   </head>
   <body class="">
     <h1>Welcome to TaskMate!</h1>
