surely this time

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,10 @@
 
     <script>
       const darkmode = localStorage.getItem('darkmode');
-      if (darkmode == false) {
+      if (darkmode == 'false') {
         document.body.className == "";
       }
-      else if (darkmode == true) {
+      else if (darkmode == 'true') {
         document.body.className = "dark-mode";
       }
     </script>
