finally dark mode is working

--- a/templates/board.html
+++ b/templates/board.html
@@ -73,5 +73,16 @@
 
     <input name="user_id" id="user_id" value="{{ user_id }}" type="hidden" style="position: absolute;">
     
+    <button onclick="toggledark()">Toggle Dark Mode!</button>
+
+    <script>
+      const darkmode = localStorage.getItem('darkmode');
+      if (darkmode == 'false') {
+        document.body.className == "";
+      }
+      else if (darkmode == 'true') {
+        document.body.className = "dark-mode";
+      }
+    </script>
   </body>
 </html>
