--- a/templates/register.html
+++ b/templates/register.html
@@ -18,5 +18,16 @@
       {{ form.password }}
       {{ form.submit }}
     </form>
+    <button onclick="toggledark()">Toggle Dark Mode!</button>
+
+    <script>
+      const darkmode = localStorage.getItem('darkmode');
+      if (darkmode == 'false') {
+        document.body.className == "";
+      }
+      else if (darkmode == 'true') {
+        document.body.className = "dark-mode";
+      }
+    </script>
   </body>
 </html>
