--- a/templates/board.html
+++ b/templates/board.html
@@ -5,6 +5,7 @@
     <title>Placeholder Name</title>
     <script type="text/javascript" src="static/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/board.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
