--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,3 +4,15 @@
 	background-color: #404040;
 	color: white;
 }
+
+.board-container-dark {
+    position: absolute;
+    top: 30vh;
+    left: 0;
+    width: 100%;
+    height: 80vh;
+    border: 2px dashed #ccc;
+    background-color: #404040; /* Light background to distinguish the area */
+    box-sizing: border-box; /* Ensure the border doesn't affect sizing */
+    z-index: 1; /* Below user_area and board-list */
+}
