--- a/templates/board.html
+++ b/templates/board.html
@@ -81,7 +81,7 @@
         boardContainer.className == "board-container";
       }
       else if (darkmode == 'true') {
-        boardContainer.className = "baord-container-dark";
+        boardContainer.className = "board-container-dark";
       }
     </script>
 
