fixing dark mode

--- a/templates/board.html
+++ b/templates/board.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href='/'>Home</a></li>
             <li><a href='/logout'>Logout</a></li>
-            <button onclick="toggledark()">Toggle Dark Mode!</button>
+            <button onclick="toggledarkboard()">Toggle Dark Mode!</button>
 
 
         </ul>
