Email Reminder Start

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,9 +17,9 @@
 
     <form method="post" action="">
       {{ form.hidden_tag() }}
-      {{ form.name }}
-      {{ form.email }}
-      {{ form.password }}
+      {{ form.name }}<br><br>
+      {{ form.email }}<br><br>
+      {{ form.password }}<br><br>
       {{ form.submit }}
     </form>
     <button onclick="toggledark()">Toggle Dark Mode!</button>
